--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -142,10 +142,10 @@ color: whitesmoke
 }
 
 .homeContainer{
-  height: 100%;
+  height: fit-content;
   width: 100%;
-  background-color: skyblue;
-  background-image: url("../imgs/pencils.jpg");
+  background-color: rgb(251, 251, 251);
+  /* background-image: url("../imgs/pencils.jpg"); */
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
