--- a/src/components/BLS/hTabs.module.css
+++ b/src/components/BLS/hTabs.module.css
@@ -487,14 +487,41 @@ margin-top:20px;
 }
 
 .deleteFamilyBtn {
-  width: 3%;
+  width: 5%;
   border-radius: 50%;
   margin: 0% 10% 0% 0%;
   font-size: 200%;
   background-color: #ff0000;
   margin-right: 10px;
+  margin-left: 15rem;
+  font-size: 20pt;
+  font-weight: bold;
+
 }
 
 #addMarketSizeFamily{
   background-color: #8dff9e;
 }
+
+.accordionContainer{
+  margin-top: 3%;
+  width: 70%;
+  height: fit-content;
+}
+
+
+.competitorUL {
+  color: white;
+  list-style-type: none;
+  margin: 0;
+  display: block;
+  padding: 0;
+  text-align: baseline;
+  justify-content: baseline;
+}
+
+  .competitorli{
+    display:inline;
+    text-align:center;
+   
+  }
