--- a/src/components/BLS/hTabs.module.css
+++ b/src/components/BLS/hTabs.module.css
@@ -491,12 +491,12 @@ margin-top:20px;
   border-radius: 50%;
   margin: 0% 10% 0% 0%;
   font-size: 200%;
-  background-color: #ff0000;
+  background-color: #ebe5e5;
   margin-right: 10px;
   margin-left: 15rem;
   font-size: 20pt;
   font-weight: bold;
-
+  visibility: hidden;
 }
 
 #addMarketSizeFamily{
